@@ -46,17 +46,17 @@ struct _AgsPlayDssiAudio
 {
   AgsRecallAudio recall_audio;
 
-  unsigned long bank;
-  unsigned long program;
+  guint bank;
+  guint program;
   
   AgsDssiPlugin *plugin;
   DSSI_Descriptor *plugin_descriptor;
 
-  unsigned long *input_port;
-  unsigned long input_lines;
+  guint *input_port;
+  guint input_lines;
 
-  unsigned long *output_port;
-  unsigned long output_lines;
+  guint *output_port;
+  guint output_lines;
 };
 
 struct _AgsPlayDssiAudioClass
